little fixed about body height and header z-index

--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -2,7 +2,6 @@
 body {
 	//--- Box model
 	box-sizing: border-box;
-	height: 100vh;
 }
   
 *,
