--- a/app/scss/modules/_main-header.scss
+++ b/app/scss/modules/_main-header.scss
@@ -2,7 +2,7 @@
 	// Positioning
 	position: sticky;
 	top: -1px;
-	z-index: 99;
+	z-index: 999;
 
 	// Box model
 	display: flex;
